--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -10,9 +10,13 @@ main:
   - name: Posts
     url: '/post'
     weight: 20
+  - name: Categoties
+    url: '/categories'
+    weight: 30
   - name: Tags
     url: '/tag'
-    weight: 30
+    weight: 40
+
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
