--- a/config/_default/menus.zh.yaml
+++ b/config/_default/menus.zh.yaml
@@ -10,9 +10,15 @@ main:
   - name: 博客
     url: '/post'
     weight: 20
+  - name: 分类
+    url: '/categories'
+    weight: 40
   - name: 标签
     url: '/tag'
-    weight: 30
+    weight: 50
+  - name: Wiki
+    url: 'https://wiki.tgc54.com'
+    weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
