--- a/data/themes/my_theme.toml
+++ b/data/themes/my_theme.toml
@@ -16,7 +16,8 @@ name = "my_minimal"
   # home_section_even = "#e5e9f0"
 
   home_section_odd = "rgb(255, 255, 255)"
-  home_section_even = "#fbfcfa"
+  # home_section_even = "#fbfcfa"
+  home_section_even = "#FFFFFF"
 
 [dark]
   # Primary
