--- a/.github/workflows/deploy-to-cloudflare-worker.yml
+++ b/.github/workflows/deploy-to-cloudflare-worker.yml
@@ -3,7 +3,7 @@ name: Deploy to Cloudflare Workers Sites
 on:
   push:
     branches:
-      - master
+      - main
 
 jobs:
   deploy:
@@ -16,6 +16,7 @@ jobs:
         uses: peaceiris/actions-hugo@v2
         with:
           hugo-version: 'latest'
+          extended: true
 
       - name: Build Hugo Site
         run: hugo --minify --gc
