--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -8,8 +8,8 @@
 appearance:
   theme_day: my_theme
   theme_night: my_theme
-  font: minimal
-  font_size: L
+  font: Minimal
+  font_size: M
 
 # SEO
 
