--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -70,7 +70,7 @@ features:
   privacy_pack:
     enable: false
   repository:
-    url: 'https://github.com/<username>/<repository>'
+    url: 'https://github.com/thallium/tgc54.com'
     content_dir: content
     branch: master
   avatar:
