--- a/data/fonts/my_font_set.toml
+++ b/data/fonts/my_font_set.toml
@@ -2,10 +2,10 @@
 name = "my_font_set"
 
 # Optional Google font URL
-google_fonts = "family=Fira+Code:wght@300;400&family=Inter:wght@100;300;400&family=Noto+Sans+SC:wght@100;300;400"
+google_fonts = "family=Fira+Code:wght@300;400&family=Inter:wght@100;300;400&family=Noto+Sans+SC:wght@100;300;400&family=Noto+Sans+JP:wght@100;300;400"
 
 # Font families
 heading_font = "Inter"
-body_font = "Noto Sans SC"
+body_font = "Noto Sans SC,Noto Sans JP"
 nav_font = "Noto Sans SC"
 mono_font = "Fira Code"
