--- a/data/fonts/my_font_set.toml
+++ b/data/fonts/my_font_set.toml
@@ -6,6 +6,6 @@ google_fonts = "family=Fira+Code:wght@300;400&family=Inter:wght@100;300;400&fami
 
 # Font families
 heading_font = "Inter"
-body_font = "Noto Sans Custom"
+# body_font = ""
 nav_font = "Noto Sans SC"
 mono_font = "Fira Code"
