--- a/config.yaml
+++ b/config.yaml
@@ -4,7 +4,7 @@ paginate: 3
 hideReadMore: true
 hasCJKLanguage: true
 
-baseURL: '/'
+baseURL: 'https://tgc54.com'
 
 
 languages:
@@ -15,37 +15,48 @@ languages:
         - identifier: "posts"
           name: "Posts"
           url: "/posts"
-        - identifier: "Categories"
+          weight: 1
+        - identifier: "categories"
           name: "Categories"
           url: "/categories"
+          weight: 2
         - identifier: "Tags"
           name: "Tags"
           url: "/tags"
+          weight: 3
         - identifier: "Wiki"
           name: "Wiki"
           url: "https://wiki.tgc54.com"
+          weight: 4
     params:
       logo:
         logoText: Thallium54
         logoHomeLink: '/'
+      langName: English
+      showMenuItems: 2
   zh:
     title: "Thallium54"
     contentDir: content/zh
     menu:
       main:
         - identifier: "posts"
-          name: "Posts"
+          name: "博文"
           url: "/zh/posts"
+          weight: 1
         - identifier: "Categories"
-          name: "Categories"
+          name: "分类"
           url: "/zh/categories"
-        - identifier: "Tags"
-          name: "Tags"
+          weight: 2
+        - identifier: "tags"
+          name: "标签"
           url: "/zh/tags"
+          weight: 3
         - identifier: "Wiki"
           name: "Wiki"
           url: "https://wiki.tgc54.com"
+          weight: 4
     params:
       logo:
         logoText: Thallium54
         logoHomeLink: '/zh'
+      langName: 简体中文
